--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 <!--1-->
 <div class="container">
-<table><caption>Продаются фроги!</caption>
+<table><caption style="color: blue;">Продаются фроги!</caption>
   <tr >
     <td><img id="fr0" src="img/frog0.jpg" onmouseover="mouselog(id)"/></td>
     <td><img id="fr1" src="img/frog1.jpg" onmouseover="mouselog(id)"/></td>
