A little fix ariphmetic button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     znak = prompt("Введите знак: ")
     str = prompt("Введите второе число: ", "0")
     y = parseInt(str)
-    if (y === 0)
+    if (y === 0 && znak === "/")
       alert("На нуль делить нельзя!")
     else{
       if (znak === "+") s = x + y;
